 - Added missing nls files, allowing installation of extra translations.
 - Smarty upgraded to version 4.3.5.
 - Enabled use of PHP function rawurlencode in Smarty templates.
 - Added Smarty modifier plugin 'adjust' to handle deprecated modifier-function-calls in templates.
 - PHPMailer upgraded to version 6.9.1.
 - TinyMCE upgraded to version 5.10.9, with support for theme-selection.
 - jQuery upgraded to version 1.12.4.
 - jQuery UI upgraded to version 1.12.1 (with previous styling).
 - jQuery migrate upgraded to version 1.4.1.

Admin theme
 - Corrected content scrolling

AdminSearch 1.0.7
 - FR #12555 - Support exclusion of inactive pages from searches

CmsJobManager 0.1.4
 - BR #12629 - Add missing changelog and retriever

CMSMailer
 - Removed deprecated status

ContentManager 1.1.11
 - BR #12474 - Taking the default page down by accident through the content type
 - BR #12635 - Apply button is shown for non-existing page and creates new pages
 - FR #12487 - (partial) Page search also checks menu text

DesignManager 1.1.10
 - Corrected new template creation

FileManager 1.6.14
 - BR #12535 - File Manager Unpack archive .tar.gz

FilePicker 1.0.7
 - BR #12621 - FilePicker upload bug
 - BR #12628 - Add missing changelog and retriever
 - Add missing ContentBlockField API methods

MenuManager 1.50.4
 - Exported from core to a normal CMSMS module in Forge
 - BR #12619 - Wrong assignment of $prevdepth.
 - BR #12620 - Version 2 breaks MenuManager with childrenof.

News 2.51.13
 - Sanitise news-item strings (title, summary, content) before display

UserGuide
 - Bundled in installer, but not automatically installed

Phar Installer 1.4
 - Added missing nls files, enabling installer sessions using extra translations
 - Install translation files (core, TinyMCE, PHPMailer) only for wanted translations
 - Enabled installed-translation changes during upgrades
 - Enabled un-installation of translations