@@ -29,6 +29,7 @@ Core - General
  - Smarty upgraded to version 4.3.5.
  - Enabled use of PHP function rawurlencode in Smarty templates.
  - Added Smarty modifier plugin 'adjust' to handle deprecated modifier-function-calls in templates.
+ - Added variable '_call' to all Smarty template objects to handle Smarty5's removal of PHP function calling.
  - PHPMailer upgraded to version 6.9.1.
  - TinyMCE upgraded to version 5.10.9, with support for theme-selection.
  - jQuery upgraded to version 1.12.4.
